--- a/package.json
+++ b/package.json
@@ -3,18 +3,6 @@
   "version": "0.26.0",
   "description": "A template for a quick start.",
   "keywords": [
-    "csssr-project-template",
-    "cpt",
-    "csssr",
-    "project",
-    "template",
-    "frontend",
-    "boilerplate",
-    "gulp",
-    "webpack",
-    "babel",
-    "jade",
-    "stylus"
   ],
   "scripts": {
     "start": "gulp --debug",
@@ -27,7 +15,7 @@
     "lint": "npm-run-all -p lint:*",
     "predeploy": "npm run production",
     "deploy": "gulp deploy",
-    "clean": "rimraf dist app/styles/sprites/*.styl",
+    "clean": "rimraf dist app/styles/sprites/*.scss",
     "prezip": "npm run production",
     "zip": "gulp zip",
     "patch": "gulp patch",
@@ -59,7 +47,6 @@
     "angular-aria": "^1.5.7",
     "angular-material": "^1.1.0-rc.5",
     "angular-messages": "^1.5.7",
-    "autoprefixer-stylus": "^0.9.0",
     "babel": "^6.5.0",
     "babel-cli": "^6.5.0",
     "babel-core": "^6.5.0",
@@ -95,8 +82,6 @@
     "gulp-sass": "^2.3.2",
     "gulp-sass-lint": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-stylint": "^3.0.0",
-    "gulp-stylus": "^2.1.0",
     "gulp-svg-symbols": "^1.0.0",
     "gulp-watch": "^4.3.5",
     "gulp-zip": "^3.0.0",
@@ -115,15 +100,8 @@
     "require-dir": "^0.3.0",
     "rimraf": "^2.5.0",
     "run-sequence": "^1.1.4",
-    "rupture": "^0.6.1",
     "source-map-loader": "^0.1.5",
     "spritesmith-dir-checker": "^1.0.0",
-    "spritesmith-stylus-retina-template": "^1.0.0",
-    "stylint": "^1.3.6",
-    "stylint-stylish": "^1.2.0",
-    "stylus": "^0.54.5",
-    "stylus-import-if-exist": "^1.1.0",
-    "stylus-svg-size-template": "^1.0.0",
     "svg4everybody": "^2.0.0",
     "webpack": "^1.12.9",
     "webpack-stats-logger": "^1.0.1",
